tests/NormalTests/paczka1/fuzzy1/39701098.err
Error in line 2: yUB1pT A244 704,1
Error in line 9: FSy A244 1,6
Error in line 5: 9DIq24eKOjr A398 23,2
Error in line 22: yUB1pT A398 24,5
Error in line 25: A244 A874 948,5
Error in line 27: A244 A244 77,1
Error in line 11: FSy A874 13,8
Error in line 26: FFMOaoNMG A255 99,0
Error in line 15: VLZFC7c4V A398 9,8
Error in line 34: FFMOaoNMG A398 48,8
